Infero nodes half-way done, going to gym! :)

--- a/src/dust2.html
+++ b/src/dust2.html
@@ -3,50 +3,11 @@
 <head>
 <title>CSnadesv1</title>
 <link rel="stylesheet" href="app.css">
+<link rel="stylesheet" href="dust2.css">
+
 </head>
 <body>
-    <div class="navbar">
-        <a class="button" href="index.html">
-            <span class="navbutton" id="homebutton">
-                <h1>Home</h1>
-            </span>
-        </a>
-
-        <a class="button" href="mirage.html">
-            <span class="navbutton" id="mirage">
-                <h1>Mirage</h1>
-            </span>
-        </a>
-
-        <a class="button" href="index.html">
-            <span class="navbutton" id="inferno">
-                <h1>Inferno</h1>
-            </span>
-        </a>
-
-        <a class="button" href="dust2.html">
-            <span class="navbutton" id="dust">
-                <h1>Dust 2</h1>
-            </span>
-        </a>
-        
-        <a class="button" href="index.html">
-            <span class="navbutton" id="vertigo">
-                <h1>Vertigo</h1>
-            </span>
-        </a>
-
-        <a class="button" href="index.html">
-            <span class="navbutton" id="nuke">
-                <h1>Nuke</h1>
-            </span>
-        </a>
-    </div>
-
-
-
-    
-
+    <script id="replace_with_navbar" src="nav.js"></script>
 
 
     <div class="map-container">
