--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,7 @@
     <link rel="stylesheet" href="app.css">
     </head>
     <body>
-        <div class="navbar">
-            
-        </div>
+        <script id="replace_with_navbar" src="nav.js"></script> 
+
     </body>
 </html>
