--- a/src/nav.html
+++ b/src/nav.html
@@ -23,7 +23,7 @@
         </span>
     </a>
     
-    <a class="button" href="index.html">
+    <a class="button" href="vertigo.html">
         <span class="navbutton" id="vertigo">
             <h1>Vertigo</h1>
         </span>
