Added closer feature. Video frame now sizes relative to the window.

--- a/src/nav.html
+++ b/src/nav.html
@@ -1,4 +1,4 @@
-<div class="navbar">
+<div class="navbar" id="navbar">
     <a class="button" href="index.html">
         <span class="navbutton" id="homebutton">
             <h1>Home</h1>
