--- a/src/vertigo.html
+++ b/src/vertigo.html
@@ -7,10 +7,12 @@
 
 </head>
 <body>
-    
+   
     <div id="videoFrame">
-        <iframe id="iFrameID" width="500" height="889" src="https://www.youtube.com/embed/2cukB4_hDCI?autoplay=1&mute=1" title="Robots testing the Bulletproof #cybertruck" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <p id="closerVideo">X</p>
+        <iframe id="iFrameID" width="100%" height="100%" src="" title="Robots testing the Bulletproof #cybertruck" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
+
     <h1 id="testing">Hello</h1>
     
     <div class="map-container">
@@ -83,5 +85,6 @@
     </div>
     <script id="replace_with_navbar" src="nav.js"></script> 
     <script src="videoFunc.js"></script>
+
 </body>
 </html>
