Video player finished for vertigo, still have to implement for the whole site.

--- a/src/vertigo.html
+++ b/src/vertigo.html
@@ -9,7 +9,7 @@
 <body>
    
     <div id="videoFrame">
-        <p id="closerVideo">X</p>
+        <img src="" id="closerVideo" width="30px">
         <iframe id="iFrameID" width="100%" height="100%" src="" title="Robots testing the Bulletproof #cybertruck" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
@@ -85,6 +85,7 @@
     </div>
     <script id="replace_with_navbar" src="nav.js"></script> 
     <script src="videoFunc.js"></script>
+    <script src="videoClose.js"></script>
 
 </body>
 </html>
