--- a/src/mirage.html
+++ b/src/mirage.html
@@ -72,6 +72,9 @@
             <img src="images/dot.png" >
         </a>
     </div>
-
+    <script id="replace_with_navbar" src="nav.js"></script> 
+    <script src="videoFunc.js"></script>
+    <script src="videoClose.js"></script>
+    <script id="replace_with_videoPlayer" src="vP.js"></script> 
 </body>
 </html>
