--- a/src/vertigo.html
+++ b/src/vertigo.html
@@ -6,15 +6,7 @@
 <link rel="stylesheet" href="vertigo.css">
 
 </head>
-<body>
-   
-    <div id="videoFrame">
-        <img src="" id="closerVideo" width="30px">
-        <iframe id="iFrameID" width="100%" height="100%" src="" title="Robots testing the Bulletproof #cybertruck" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    </div>
-
-    <h1 id="testing">Hello</h1>
-    
+<body>    
     <div class="map-container">
 
         <span class="title" style="font-family:Trebuchet MS">
@@ -86,6 +78,7 @@
     <script id="replace_with_navbar" src="nav.js"></script> 
     <script src="videoFunc.js"></script>
     <script src="videoClose.js"></script>
+    <script id="replace_with_videoPlayer" src="vP.js"></script> 
 
 </body>
 </html>
