Added nuke map, small change

--- a/src/inferno.html
+++ b/src/inferno.html
@@ -4,109 +4,98 @@
 <title>CSnadesv1</title>
 <link rel="stylesheet" href="app.css">
 <link rel="stylesheet" href="inferno.css">
-
 </head>
 <body>
-    <script id="replace_with_navbar" src="nav.js"></script> 
-
+    <script id="replace_with_navbar" src="nav.js"></script>
 
     <div class="map-container">
-
         <span class="title" style="font-family:Trebuchet MS">
             <h1>Inferno</h1>
         </span>
 
         <img src="images/CS2_inferno_radar.png" class="map">
-        <a id="coffin" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="coffin" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="garden" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="garden" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="dark" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="dark" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="grill" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="grill" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="fountain" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="fountain" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="quad" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="quad" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="first" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="first" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="second" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="second" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="car" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="car" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="banana" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="banana" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="ct" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="ct" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="tramp" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="tramp" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="bottommid" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="bottommid" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="secondmid" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="secondmid" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="along" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="along" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="close" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="close" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="topmid" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="topmid" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="ashort" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="ashort" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="graveyard" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="graveyard" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="cemetary" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="cemetary" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="backsitea" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="backsitea" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="window" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="window" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="pit" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="pit" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="balcony" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="balcony" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="library" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="library" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="arch" title="Coffin Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="arch" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-
-        <!--coffins, garden, dark, 
-        grill, water, fountain, quad,
-         1st, 2nd, car, banana,
-          ct, tramp, bottom mid,
-           underpass, 2nd mid, 
-           a long, close, boiler,
-            top mid, a short,
-             grave yard, cemetary,
-              back site a, stairs, 
-              window, pit, balcony,
-               library, arch-->
     </div>
+    <script id="replace_with_navbar" src="nav.js"></script> 
+    <script src="videoFunc.js"></script>
+    <script id="replace_with_videoPlayer" src="vP.js"></script> 
+
 </body>
 </html>
