--- a/src/mirage.html
+++ b/src/mirage.html
@@ -4,11 +4,9 @@
 <title>CSnadesv1</title>
 <link rel="stylesheet" href="app.css">
 <link rel="stylesheet" href="mirage.css">
-
 </head>
 <body>
     <script id="replace_with_navbar" src="nav.js"></script> <!--NAVBARRRR :)-->
-
 
     <div class="map-container">
 
@@ -17,59 +15,59 @@
         </span>
 
         <img src="images/image (2).png" class="map">
-        <a id="cat" title="X-Box Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="cat" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="window" title="X-Box Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="window" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="con" title="X-Box Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="con" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="apps" title="X-Box Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="apps" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="van" title="X-Box Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="van" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="bench" title="X-Box Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="bench" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="CT" title="X-Box Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="CT" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="stairs" title="X-Box Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="stairs" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="jungle" title="X-Box Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="jungle" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="marketWindow" title="X-Box Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="marketWindow" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="marketDoor" title="X-Box Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="marketDoor" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="topmidtop" title="X-Box Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="topmidtop" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="underpass" title="X-Box Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="underpass" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="getleft" title="X-Box Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="getleft" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="getright" title="X-Box Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="getright" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="appsDeep" title="X-Box Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="appsDeep" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="topmidbottom" title="X-Box Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="topmidbottom" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
-        <a id="midcon" title="X-Box Smoke" class="node" href="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
+        <a id="midcon" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
         </a>
     </div>
     <script id="replace_with_navbar" src="nav.js"></script> 
