Added nuke nodes, adding ancient

--- a/src/nuke.html
+++ b/src/nuke.html
@@ -15,7 +15,49 @@
         </span>
 
         <img src="images/Cs2_nuke_radar.png" class="map">
-        <a id="cat" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="garage" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
+        </a>
+        <a id="secret1" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
+        </a>
+        <a id="secret2" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
+        </a>
+        <a id="outside1" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
+        </a>
+        <a id="outside2" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
+        </a>
+        <a id="outside3" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
+        </a>
+        <a id="main1" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
+        </a>
+        <a id="main2" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
+        </a>
+        <a id="ctred" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
+        </a>
+        <a id="silo" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
+        </a>
+        <a id="heaven" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
+        </a>
+        <a id="bigbox1" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
+        </a>
+        <a id="bigbox2" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
+        </a>
+        <a id="vent" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+            <img src="images/dot.png">
+        </a>
+        <a id="trophy" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
             <img src="images/dot.png">
         </a>
     </div>
