--- a/src/nav.html
+++ b/src/nav.html
@@ -29,9 +29,15 @@
         </span>
     </a>
 
-    <a class="button" href="index.html">
+    <a class="button" href="nuke.html">
         <span class="navbutton" id="nuke">
             <h1>Nuke</h1>
+        </span>
+    </a>
+
+    <a class="button" href="ancient.html">
+        <span class="navbutton" id="ancient">
+            <h1>Ancient</h1>
         </span>
     </a>
 </div>
