Added a really cool hover feature on buttons, fixed scaling issue!

--- a/src/ancient.html
+++ b/src/ancient.html
@@ -24,7 +24,7 @@
             <a id="street" title="Street Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
                 <img src="images/dot.png">
             </a>
-            <a id="tunnel1" title="Tunnel 1 Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
+            <a id="tunnel" title="Tunnel Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
                 <img src="images/dot.png">
             </a>
             <a id="outside-a" title="Outside A Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
