--- a/src/nav.html
+++ b/src/nav.html
@@ -40,4 +40,10 @@
             <h1>Ancient</h1>
         </span>
     </a>
+
+    <a class="button" href="anubis.html">
+        <span class="navbutton" id="anubis">
+            <h1>Anubis</h1>
+        </span>
+    </a>
 </div>
