Added map click to close videoPlayer

--- a/src/ancient.html
+++ b/src/ancient.html
@@ -14,7 +14,7 @@
         </span>
         
         <div id="buttons">
-            <img src="images/ancientmap.png" class="map">
+            <img src="images/ancientmap.png" class="map" id="map">
             <a id="plat" title="Plat Smoke" data-url="https://www.youtube.com/embed/bGATuhzXyFg" class="node">
                 <img src="images/dot.png">
             </a>
