--- a/src/anubis.html
+++ b/src/anubis.html
@@ -7,14 +7,14 @@
 
 </head>
 <body>    
-    <div class="map-container">
+    <div class="map-container" >
 
         <span class="title" style="font-family:Trebuchet MS">
             <h1>Anubis</h1>
         </span>
         
         <div id="buttons">
-        <img src="images/anubismap.png" class="map">
+        <img src="images/anubismap.png" class="map" id="map">
         <a id="b-stairs" title="Coffin Smoke" data-url="https://www.youtube.com/embed/bGATuhzXyFg" class="node" >
             <img src="images/dot.png" >
         </a>
