--- a/src/dust2.html
+++ b/src/dust2.html
@@ -8,12 +8,12 @@
 <body>
     <script id="replace_with_navbar" src="nav.js"></script>
 
-    <div class="map-container">
+    <div class="map-container" >
         <span class="title" style="font-family:Trebuchet MS">
             <h1>Dust 2</h1>
         </span>
 
-        <img src="images/Cs2_dust2_overview (1).png" width="600" class="map">
+        <img src="images/Cs2_dust2_overview (1).png" class="map" id="map">
         <a id="cat" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
             <img src="images/dot.png">
         </a>
