--- a/src/mirage.html
+++ b/src/mirage.html
@@ -8,13 +8,13 @@
 <body>
     <script id="replace_with_navbar" src="nav.js"></script> <!--NAVBARRRR :)-->
 
-    <div class="map-container">
+    <div class="map-container" >
 
         <span class="title" style="font-family:Trebuchet MS">
             <h1>Mirage</h1>
         </span>
 
-        <img src="images/image (2).png" class="map">
+        <img src="images/image (2).png" class="map" id="map">
         <a id="cat" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
             <img src="images/dot.png">
         </a>
