--- a/src/inferno.html
+++ b/src/inferno.html
@@ -8,12 +8,12 @@
 <body>
     <script id="replace_with_navbar" src="nav.js"></script>
 
-    <div class="map-container">
+    <div class="map-container" >
         <span class="title" style="font-family:Trebuchet MS">
             <h1>Inferno</h1>
         </span>
 
-        <img src="images/CS2_inferno_radar.png" class="map">
+        <img src="images/CS2_inferno_radar.png" class="map" id="map">
         <a id="coffin" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
             <img src="images/dot.png">
         </a>
