Finished anubis nodes, going to finish yt shorts data uploads

--- a/src/anubis.html
+++ b/src/anubis.html
@@ -1,83 +1,74 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>CSnadesv1</title>
-<link rel="stylesheet" href="app.css">
-<link rel="stylesheet" href="anubis.css">
-
+    <title>CSnadesv1</title>
+    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="anubis.css">
 </head>
 <body>    
-    <div class="map-container" >
-
+    <div class="map-container">
         <span class="title" style="font-family:Trebuchet MS">
             <h1>Anubis</h1>
         </span>
         
         <div id="buttons">
-        <img src="images/anubismap.png" class="map" id="map">
-        <a id="b-stairs" title="Coffin Smoke" data-url="https://www.youtube.com/embed/bGATuhzXyFg" class="node" >
-            <img src="images/dot.png" >
-        </a>
-        <a id="pillar" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
-        </a>
-        <a id="quad" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
-        </a>
-        <a id="double" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
-        </a>
-        <a id="electric" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
-        </a>
-        <a id="white" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
-        </a>
-        <a id="b-connector" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
-        </a>
-        <a id="ct-b" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
-        </a>
-        <a id="ct" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
-        </a>
-        <a id="middle" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
-        </a>
-        <a id="backroom" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
-        </a>
-        <a id="heaven" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
-        </a>
-        <a id="new-door" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
-        </a>
-        <a id="asite" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
-        </a>
-        <a id="sandbags" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
-        </a>
-        <a id="boost" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
-        </a>
-        <a id="ct-lobby" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
-        </a>
-        <a id="a-lobby" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
-        </a>
-        <a id="t-ramppush" title="Coffin Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-            <img src="images/dot.png" >
-        </a>
+            <img src="images/anubismap.png" class="map" id="map">
+            <a id="heaven" title="heaven Smoke" data-url="https://www.youtube.com/embed/bGATuhzXyFg" class="node">
+                <img src="images/dot.png">
+            </a>
+            <a id="a-con" title="a-con Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+                <img src="images/dot.png">
+            </a>
+            <a id="a" title="a Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+                <img src="images/dot.png">
+            </a>
+            <a id="a-main" title="a-main Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+                <img src="images/dot.png">
+            </a>
+            <a id="mid" title="mid Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+                <img src="images/dot.png">
+            </a>
+            <a id="water" title="water Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+                <img src="images/dot.png">
+            </a>
+            <a id="top-mid" title="top-mid Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+                <img src="images/dot.png">
+            </a>
+            <a id="window" title="window Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+                <img src="images/dot.png">
+            </a>
+            <a id="bridge" title="bridge Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+                <img src="images/dot.png">
+            </a>
+            <a id="b-default" title="b-default Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+                <img src="images/dot.png">
+            </a>
+            <a id="b-corner" title="b-corner Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+                <img src="images/dot.png">
+            </a>
+            <a id="street" title="street Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+                <img src="images/dot.png">
+            </a>
+            <a id="palace" title="palace Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+                <img src="images/dot.png">
+            </a>
+            <a id="gate" title="gate Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+                <img src="images/dot.png">
+            </a>
+            <a id="b-con1" title="B-con Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+                <img src="images/dot.png">
+            </a>
+            <a id="b-con2" title="B-con Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+                <img src="images/dot.png">
+            </a>
+            <a id="b-con3" title="B-con Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+                <img src="images/dot.png">
+            </a>
+        </div>
     </div>
 
-    </div>
     <script id="replace_with_navbar" src="nav.js"></script> 
     <script src="videoFunc.js"></script>
     <script id="replace_with_videoPlayer" src="vP.js"></script> 
-
 </body>
 </html>
