--- a/src/anubis.html
+++ b/src/anubis.html
@@ -13,55 +13,52 @@
         
         <div id="buttons">
             <img src="images/anubismap.png" class="map" id="map">
-            <a id="heaven" title="heaven Smoke" data-url="https://www.youtube.com/embed/bGATuhzXyFg" class="node">
+            <a id="heaven" title="Heaven Smoke" data-url="https://www.youtube.com/embed/oR7L-Db_iQc" class="node">
                 <img src="images/dot.png">
             </a>
-            <a id="a-con" title="a-con Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+            <a id="a-con" title="A-con Smoke" class="node" data-url="https://www.youtube.com/embed/2IeO5_qJPs4">
                 <img src="images/dot.png">
             </a>
-            <a id="a" title="a Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+            <a id="a" title="a Smoke" class="node" data-url="https://www.youtube.com/embed/yGze4SjyyU4">
                 <img src="images/dot.png">
             </a>
-            <a id="a-main" title="a-main Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+            <a id="a-main" title="A-main Smoke" class="node" data-url="https://www.youtube.com/embed/p922hY0saIM">
                 <img src="images/dot.png">
             </a>
-            <a id="mid" title="mid Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+            <a id="mid" title="Mid-Temple Smoke" class="node" data-url="https://www.youtube.com/embed/H-l7wB-Nva0">
                 <img src="images/dot.png">
             </a>
-            <a id="water" title="water Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+            <a id="mid2" title="Bottom-Mid Smoke" class="node" data-url="https://www.youtube.com/embed/CqFCHOzeVEI">
                 <img src="images/dot.png">
             </a>
-            <a id="top-mid" title="top-mid Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+            <a id="top-mid" title="Top-mid Smoke" class="node" data-url="https://www.youtube.com/embed/5H73NgVppF8">
                 <img src="images/dot.png">
             </a>
-            <a id="window" title="window Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+            <a id="window" title="Window Smoke" class="node" data-url="https://www.youtube.com/embed/PZ5EDVkq4bk">
                 <img src="images/dot.png">
             </a>
-            <a id="bridge" title="bridge Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+            <a id="bridge" title="Bridge Smoke" class="node" data-url="https://www.youtube.com/embed/J-TD2HVX0HE">
                 <img src="images/dot.png">
             </a>
-            <a id="b-default" title="b-default Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+            <a id="b-default" title="B-default Smoke" class="node" data-url="https://www.youtube.com/embed/tFKImsuYMUE">
                 <img src="images/dot.png">
             </a>
-            <a id="b-corner" title="b-corner Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+            <a id="b-corner" title="B-corner Smoke" class="node" data-url="https://www.youtube.com/embed/kr4YbW6tgGo">
                 <img src="images/dot.png">
             </a>
-            <a id="street" title="street Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+            <a id="street" title="Street Smoke" class="node" data-url="https://www.youtube.com/embed/riHQYJJSzW8">
                 <img src="images/dot.png">
             </a>
-            <a id="palace" title="palace Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+            <a id="palace" title="Palace Smoke" class="node" data-url="https://www.youtube.com/embed/ksJND0X6V5Y">
                 <img src="images/dot.png">
             </a>
-            <a id="gate" title="gate Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+            <a id="gate" title="Gate Smoke" class="node" data-url="https://www.youtube.com/embed/xhzntdmkcfM">
                 <img src="images/dot.png">
             </a>
-            <a id="b-con1" title="B-con Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+            <a id="b-con2" title="B-con Smoke" class="node" data-url="https://www.youtube.com/embed/EIjXTUCpIK4">
                 <img src="images/dot.png">
             </a>
-            <a id="b-con2" title="B-con Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
-                <img src="images/dot.png">
-            </a>
-            <a id="b-con3" title="B-con Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM">
+            <a id="b-con3" title="B-con Smoke" class="node" data-url="https://www.youtube.com/embed/nhQFSpgl9wo">
                 <img src="images/dot.png">
             </a>
         </div>
