--- a/src/ancient.html
+++ b/src/ancient.html
@@ -15,64 +15,55 @@
         
         <div id="buttons">
             <img src="images/ancientmap.png" class="map" id="map">
-            <a id="plat" title="Plat Smoke" data-url="https://www.youtube.com/embed/bGATuhzXyFg" class="node">
+            <a id="plat" title="Plat Smoke" data-url="https://www.youtube.com/embed/QaE9mNO5MDI" class="node">
                 <img src="images/dot.png">
             </a>
-            <a id="temple" title="Temple Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
+            <a id="temple" title="Temple Smoke" class="node" data-url="https://www.youtube.com/embed/zPqzhu7rLQ4" target="_blank">
                 <img src="images/dot.png">
             </a>
-            <a id="street" title="Street Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
+            <a id="street" title="Street Smoke" class="node" data-url="https://www.youtube.com/embed/4fPY09IV98I" target="_blank">
+                <img src="images/dot.png">
+            </a> 
+            <a id="red" title="Red Smoke" class="node" data-url="https://www.youtube.com/embed/67nCO8srp_g" target="_blank">
                 <img src="images/dot.png">
             </a>
-            <a id="tunnel" title="Tunnel Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
+            <a id="pit" title="Pit Smoke" class="node" data-url="https://www.youtube.com/embed/E36JIwhRxv0" target="_blank">
                 <img src="images/dot.png">
             </a>
-            <a id="outside-a" title="Outside A Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
+            <a id="forest" title="Forest Smoke" class="node" data-url="https://www.youtube.com/embed/xrkLWvx_RKM" target="_blank">
                 <img src="images/dot.png">
             </a>
-            <a id="red" title="Red Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
+            <a id="stairs" title="Stairs Smoke" class="node" data-url="https://www.youtube.com/embed/SCGrqNwWy6M" target="_blank">
                 <img src="images/dot.png">
             </a>
-            <a id="pit" title="Pit Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
+            <a id="donut" title="Donut Smoke" class="node" data-url="https://www.youtube.com/embed/Opqtr9H8CyY" target="_blank">
                 <img src="images/dot.png">
             </a>
-            <a id="forest" title="Forest Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
+            <a id="elbow" title="Elbow Smoke" class="node" data-url="https://www.youtube.com/embed/Q4u07Dvl130" target="_blank">
                 <img src="images/dot.png">
             </a>
-            <a id="stairs" title="Stairs Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
+            <a id="snake" title="Snake Smoke" class="node" data-url="https://www.youtube.com/embed/IosAp1tQnMU" target="_blank">
                 <img src="images/dot.png">
             </a>
-            <a id="donut" title="Donut Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
+            <a id="construction" title="Construction Smoke" class="node" data-url="https://www.youtube.com/embed/26lKPmtcfEs" target="_blank">
                 <img src="images/dot.png">
             </a>
-            <a id="elbow" title="Elbow Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
+            <a id="banger" title="Lane Smoke" class="node" data-url="https://www.youtube.com/embed/1GkODI5_39A" target="_blank">
                 <img src="images/dot.png">
             </a>
-            <a id="snake" title="Snake Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
+            <a id="double-door" title="Double Door Smoke" class="node" data-url="https://www.youtube.com/embed/0FcgLcpA3Ko" target="_blank">
                 <img src="images/dot.png">
             </a>
-            <a id="construction" title="Construction Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
+            <a id="ramp" title="Ramp Smoke" class="node" data-url="https://www.youtube.com/embed/uBs1D3-egZA" target="_blank">
                 <img src="images/dot.png">
             </a>
-            <a id="banger" title="Banger Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
+            <a id="cave" title="Cave Smoke" class="node" data-url="https://www.youtube.com/embed/qFGpw_s7TgE" target="_blank">
                 <img src="images/dot.png">
             </a>
-            <a id="double-door" title="Double Door Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
+            <a id="back-site" title="Back Site Smoke" class="node" data-url="https://www.youtube.com/embed/VRslsclmZx4" target="_blank">
                 <img src="images/dot.png">
             </a>
-            <a id="ramp" title="Ramp Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-                <img src="images/dot.png">
-            </a>
-            <a id="cave" title="Cave Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-                <img src="images/dot.png">
-            </a>
-            <a id="back-site" title="Back Site Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-                <img src="images/dot.png">
-            </a>
-            <a id="back-hall" title="Back Hall Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
-                <img src="images/dot.png">
-            </a>
-            <a id="short" title="Short Smoke" class="node" data-url="https://www.youtube.com/shorts/UytKwFuPvoM" target="_blank">
+            <a id="short" title="Short Smoke" class="node" data-url="https://www.youtube.com/embed/RkW0GOCMsv0" target="_blank">
                 <img src="images/dot.png">
             </a>
         </div>
