--- a/src/ancient.html
+++ b/src/ancient.html
@@ -18,52 +18,52 @@
             <a id="plat" title="Plat Smoke" data-url="https://www.youtube.com/embed/QaE9mNO5MDI" class="node">
                 <img src="images/dot.png">
             </a>
-            <a id="temple" title="Temple Smoke" class="node" data-url="https://www.youtube.com/embed/zPqzhu7rLQ4" target="_blank">
+            <a id="temple" title="Temple Smoke" class="node" data-url="https://www.youtube.com/embed/zPqzhu7rLQ4">
                 <img src="images/dot.png">
             </a>
-            <a id="street" title="Street Smoke" class="node" data-url="https://www.youtube.com/embed/4fPY09IV98I" target="_blank">
+            <a id="street" title="Street Smoke" class="node" data-url="https://www.youtube.com/embed/4fPY09IV98I">
                 <img src="images/dot.png">
             </a> 
-            <a id="red" title="Red Smoke" class="node" data-url="https://www.youtube.com/embed/67nCO8srp_g" target="_blank">
+            <a id="red" title="Red Smoke" class="node" data-url="https://www.youtube.com/embed/67nCO8srp_g">
                 <img src="images/dot.png">
             </a>
-            <a id="pit" title="Pit Smoke" class="node" data-url="https://www.youtube.com/embed/E36JIwhRxv0" target="_blank">
+            <a id="pit" title="Pit Smoke" class="node" data-url="https://www.youtube.com/embed/E36JIwhRxv0">
                 <img src="images/dot.png">
             </a>
-            <a id="forest" title="Forest Smoke" class="node" data-url="https://www.youtube.com/embed/xrkLWvx_RKM" target="_blank">
+            <a id="forest" title="Forest Smoke" class="node" data-url="https://www.youtube.com/embed/xrkLWvx_RKM">
                 <img src="images/dot.png">
             </a>
-            <a id="stairs" title="Stairs Smoke" class="node" data-url="https://www.youtube.com/embed/SCGrqNwWy6M" target="_blank">
+            <a id="stairs" title="Stairs Smoke" class="node" data-url="https://www.youtube.com/embed/SCGrqNwWy6M">
                 <img src="images/dot.png">
             </a>
-            <a id="donut" title="Donut Smoke" class="node" data-url="https://www.youtube.com/embed/Opqtr9H8CyY" target="_blank">
+            <a id="donut" title="Donut Smoke" class="node" data-url="https://www.youtube.com/embed/Opqtr9H8CyY">
                 <img src="images/dot.png">
             </a>
-            <a id="elbow" title="Elbow Smoke" class="node" data-url="https://www.youtube.com/embed/Q4u07Dvl130" target="_blank">
+            <a id="elbow" title="Elbow Smoke" class="node" data-url="https://www.youtube.com/embed/Q4u07Dvl130">
                 <img src="images/dot.png">
             </a>
-            <a id="snake" title="Snake Smoke" class="node" data-url="https://www.youtube.com/embed/IosAp1tQnMU" target="_blank">
+            <a id="snake" title="Snake Smoke" class="node" data-url="https://www.youtube.com/embed/IosAp1tQnMU">
                 <img src="images/dot.png">
             </a>
-            <a id="construction" title="Construction Smoke" class="node" data-url="https://www.youtube.com/embed/26lKPmtcfEs" target="_blank">
+            <a id="construction" title="Construction Smoke" class="node" data-url="https://www.youtube.com/embed/26lKPmtcfEs">
                 <img src="images/dot.png">
             </a>
-            <a id="banger" title="Lane Smoke" class="node" data-url="https://www.youtube.com/embed/1GkODI5_39A" target="_blank">
+            <a id="banger" title="Lane Smoke" class="node" data-url="https://www.youtube.com/embed/1GkODI5_39A">
                 <img src="images/dot.png">
             </a>
-            <a id="double-door" title="Double Door Smoke" class="node" data-url="https://www.youtube.com/embed/0FcgLcpA3Ko" target="_blank">
+            <a id="double-door" title="Double Door Smoke" class="node" data-url="https://www.youtube.com/embed/0FcgLcpA3Ko">
                 <img src="images/dot.png">
             </a>
-            <a id="ramp" title="Ramp Smoke" class="node" data-url="https://www.youtube.com/embed/uBs1D3-egZA" target="_blank">
+            <a id="ramp" title="Ramp Smoke" class="node" data-url="https://www.youtube.com/embed/uBs1D3-egZA">
                 <img src="images/dot.png">
             </a>
-            <a id="cave" title="Cave Smoke" class="node" data-url="https://www.youtube.com/embed/qFGpw_s7TgE" target="_blank">
+            <a id="cave" title="Cave Smoke" class="node" data-url="https://www.youtube.com/embed/qFGpw_s7TgE">
                 <img src="images/dot.png">
             </a>
-            <a id="back-site" title="Back Site Smoke" class="node" data-url="https://www.youtube.com/embed/VRslsclmZx4" target="_blank">
+            <a id="back-site" title="Back Site Smoke" class="node" data-url="https://www.youtube.com/embed/VRslsclmZx4">
                 <img src="images/dot.png">
             </a>
-            <a id="short" title="Short Smoke" class="node" data-url="https://www.youtube.com/embed/RkW0GOCMsv0" target="_blank">
+            <a id="short" title="Short Smoke" class="node" data-url="https://www.youtube.com/embed/RkW0GOCMsv0">
                 <img src="images/dot.png">
             </a>
         </div>
