Finished implementing nuke, new bug with dust 2 xbox smoke.

--- a/src/nuke.html
+++ b/src/nuke.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>CSnadesv1</title>
-<link rel="stylesheet" href="app.css">
-<link rel="stylesheet" href="nuke.css">
+    <title>CSnadesv1</title>
+    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="nuke.css">
 </head>
 <body>
     <script id="replace_with_navbar" src="nav.js"></script> <!--NAVBARRRR :)-->
@@ -15,49 +15,49 @@
         </span>
 
         <img src="images/Cs2_nuke_radar.png" class="map" id="map">
-        <a id="garage" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="garage" title="Garage Smoke" class="node" data-url="https://www.youtube.com/embed/HXOTSKvWtig">
             <img src="images/dot.png">
         </a>
-        <a id="secret1" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="secret1" title="Secret1 Smoke" class="node" data-url="https://www.youtube.com/embed/mQNdjMW1jbo">
             <img src="images/dot.png">
         </a>
-        <a id="secret2" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="secret2" title="Secret2 Smoke" class="node" data-url="https://www.youtube.com/embed/mQNdjMW1jbo">
             <img src="images/dot.png">
         </a>
-        <a id="outside1" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="outside1" title="Outside1 Smoke" class="node" data-url="https://www.youtube.com/embed/tH67Zyd_ggs">
             <img src="images/dot.png">
         </a>
-        <a id="outside2" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="outside2" title="Outside2 Smoke" class="node" data-url="https://www.youtube.com/embed/Ox8wpQ4Uhis">
             <img src="images/dot.png">
         </a>
-        <a id="outside3" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="main1" title="Main1 Smoke" class="node" data-url="https://www.youtube.com/embed/Az6PwbSwnPk">
             <img src="images/dot.png">
         </a>
-        <a id="main1" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="main2" title="Main2 Smoke" class="node" data-url="https://www.youtube.com/embed/I9C3-fg-Hvw">
             <img src="images/dot.png">
         </a>
-        <a id="main2" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="hut" title="Hut Smoke" class="node" data-url="https://www.youtube.com/embed/yzq6tHGwtBY">
             <img src="images/dot.png">
         </a>
-        <a id="ctred" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="ctred" title="Ctred Smoke" class="node" data-url="https://www.youtube.com/embed/IvQxl41spbY">
             <img src="images/dot.png">
         </a>
-        <a id="silo" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="silo" title="Silo Smoke" class="node" data-url="https://www.youtube.com/embed/7l8vHbIFPg4">
             <img src="images/dot.png">
         </a>
-        <a id="heaven" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="heaven" title="Heaven Smoke" class="node" data-url="https://www.youtube.com/embed/bu5zMpM5wKo">
             <img src="images/dot.png">
         </a>
-        <a id="bigbox1" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="heaven-ct" title="Heaven-CT Smoke" class="node" data-url="https://www.youtube.com/embed/cXCPfNNsdhI">
             <img src="images/dot.png">
         </a>
-        <a id="bigbox2" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="bigbox1" title="Bigbox1 Smoke" class="node" data-url="https://www.youtube.com/embed/Hd1VWapEhjI">
             <img src="images/dot.png">
         </a>
-        <a id="vent" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="bigbox2" title="Bigbox2 Smoke" class="node" data-url="https://www.youtube.com/embed/FkeCkY3MNRc">
             <img src="images/dot.png">
         </a>
-        <a id="trophy" title="X-Box Smoke" class="node" data-url="https://www.youtube.com/embed/UytKwFuPvoM" target="_blank">
+        <a id="vent" title="Vent Smoke" class="node" data-url="https://www.youtube.com/embed/RN5W5nDosSM">
             <img src="images/dot.png">
         </a>
     </div>
